[package]
name = "catflip"
version = "0.1.0"
description = "Schrödinger's Box - A 50/50 coin flip game on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "catflip"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"