[package]
name = "catflip"
version = "0.1.0"
description = "Schrödinger's Box - A 50/50 coin flip game on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "catflip"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", default-features = false }
# Removed anchor-spl to reduce size

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true